# asplib_playground

./: .gitignore  CMakeLists.txt  README.md  build_solution_VS2013.cmd  build_solution_VS2013_x64.cmd  build_solution_VS2015.cmd  build_solution_VS2015_x64.cmd
Exectuables/: CMakeLists.txt
Exectuables/Biquad/: CMakeLists.txt  main.cpp
Exectuables/ComputeDeviceInfo/: CMakeLists.txt  main.cpp
Exectuables/SpectrumVisProcessor/: CMakeLists.txt  main.cpp
MatlabDlls/: CMakeLists.txt
MatlabDlls/Biquad/: BiquadDll.cpp  BiquadDll.h  CMakeLists.txt
MatlabDlls/Biquad/m-Files/: asplib_createBiquad.m  asplib_init.m  asplib_load_BiquadDll.m  asplib_processBiquads.m  asplib_runBiquadTest.m  asplib_setBiquadCoefficients.m  asplib_setBiquadGain.m  asplib_setBiquadGains.m  asplib_setBiquadsCoefficients.m  asplib_unload_BiquadDll.m
MatlabDlls/Compressor/: CMakeLists.txt  Compressor.cpp  Compressor.hpp  CompressorDll.cpp  CompressorDll.h  typedefs.h
MatlabDlls/Compressor/m-Files/: asplib_createCompressor.m  asplib_destroyCompressor.m  asplib_load_CompressorDll.m  asplib_processCompressor.m  asplib_unload_CompressorDll.m
MatlabDlls/SpectrumVisProcessor/: CMakeLists.txt  SpectrumVisProcessorDll.cpp  SpectrumVisProcessorDll.h
MatlabDlls/SpectrumVisProcessor/m-Files/: asplib_createSpectrumVisProcessor.m  asplib_destroySpectrumVisProcessor.m  asplib_load_SpectrumVisProcessorDll.m  asplib_processSpectrumVisProcessor.m  asplib_runSpectrumVisProcessorAnimationTest.m  asplib_runSpectrumVisProcessorTest.m  asplib_unload_SpectrumVisProcessorDll.m
cmake/: FindMatlab.cmake  add_asplib.cmake
cmake/depends/: CMakeLists.txt  add_asplib.cmake
